** Known BREAKING CHANGES from NH3.0.0.GA to NH3.0.1.GA

	##### Design time #####
		* [NH-2481] - Deprecated: ISession.SaveOrUpdateCopy methods - use ISession.Merge methods instead

	##### Run time #####
		* [NH-2481] - An exception will now be thrown when an entity references a transient entity and cascade="merge|all" is not configured on the association

	##### Possible Breaking Changes #####
		* [NH-2461] - Signature change for IQuery.SetParameterList

** Known BREAKING CHANGES from NH2.1.1.GA to NH3.0.0.GA

	##### Design time #####
		* [NH-2392] - ICompositeUserType.NullSafeSet method signature changed

	##### Run time #####
		* [NH-2199] - null values in maps/dictionaries are no longer silenty ignored/deleted
		* [NH-1894] - SybaseAnywhereDialect has been removed, and replaced with SybaseASA9Dialect.
			    - Sybase Adaptive Server Enterprise (ASE) dialects removed.

	##### Possible Breaking Changes #####
		* [NH-2251] - Signature change for GetLimitString in Dialect
		* [NH-2284] - Obsolete members removed
		* Related to [NH-2358]: DateTimeOffset type now works as a DateTimeOffset instead a "surrogate" of DateTime

Build 3.0.0.GA (rev5290)
=============================

** Bug
    * [NH-2222] - Wrong type for constant/parameter value used
    * [NH-2234] - Query on Property mapped with IUserType
    * [NH-2244] - Linq provider does not has full supporting of components in queries.
    * [NH-2370] - NHibernate.Linq simple where clause results in a table scan.
    * [NH-2394] - Comparing an enum (stored as a string with a user type) to an enum literal fails
    * [NH-2398] - Null equality uses non-boolean expression
    * [NH-2402] - LINQ equality should map to SQL equality
    * [NH-2403] - Linq boolean constants are of wrong type (integer)
    * [NH-2409] - Using WithClause in Criteria API causes NH to mix up query parameters
    * [NH-2416] - NHibernate.Linq does not support queries against <map> elements