@@ -66,7 +66,7 @@
 			</join>
 			<join table="t_silly" fetch="select" optional="true">
 				<key column="person_id"/>
-				<property name="Silly"/>
+				<property name="_Silly" access="field"/>
 			</join>
 		</subclass>
 	</class>
