@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<hibernate-mapping xmlns="urn:nhibernate-mapping-2.2"
+						namespace="NHibernate.Test.NHSpecificTest.AccessAndCorrectPropertyName"
+						assembly="NHibernate.Test">
+	<class name="Dog">
+		<id name="Id">
+			<generator class="assigned"/>
+		</id>
+		<property name="Name"
+							access="field.camelcase"/>
+	</class>
+</hibernate-mapping>
