@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<hibernate-mapping xmlns="urn:nhibernate-mapping-2.2"
+						namespace="NHibernate.Test.NHSpecificTest.AccessAndCorrectPropertyName"
+						assembly="NHibernate.Test"
+						default-access="field.camelcase-underscore">
+
+	<class name="Person">
+		<id name="Id"
+				access="property">
+			<generator class="assigned"/>
+		</id>
+		<property name="FirstName"/>
+  </class>
+</hibernate-mapping>
