@@ -45,6 +45,15 @@ namespace NHibernate
 			this.propertyName = propertyName;
 		}
 
+		public PropertyNotFoundException(string propertyName, string fieldName, System.Type targetType)
+			: base(String.Format("Could not find the property '{0}', associated to the field '{1}', in class '{2}'", propertyName, fieldName, targetType
+			       	))
+		{
+			this.targetType = targetType;
+			this.propertyName = propertyName;
+			accessorType = fieldName;
+		}
+
 		/// <summary>
 		/// Initializes a new instance of the <see cref="PropertyNotFoundException"/> class
 		/// with serialized data.
